changed events listing
did a lot of things

--- a/community.html
+++ b/community.html
@@ -7,38 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Font awesome icon -->
     <link rl="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="css/style3.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
 
     <!-- header -->
-    <header>
-      <nav class = "navbar">
-        <div class = "container">
-          <a href = "index.html" class = "navbar-brand">LocalShop</a>
-          <div class = "navbar-nav">
-            <a href = "">home</a>
-            <a href = "">login</a>
-            <a href = "">create</a>
-          </div>
-        </div>
-      </nav>
-      <div class = "banner">
-        <div class = "container">
-          <h1 class = "banner-title">
-            Local Shop
-          </h1>
-          <p>everything that you want to know about local buisnesses</p>
-          <form>
-            <input type = "text" class = "search-input" placeholder="Search Posts">
-            <button type = "submit" class = "search-btn">
-              <i class = "fas fa-search"></i>
-            </button>
-          </form>
-        </div>
+    <section id="header">
+      <a href="buisnessListing.html"><img src="images/localhublogo-removebg-preview.png" width="100" height="100"></a>
+      <div>
+          <ul id="navbar">
+              <li><a href="businessListing.html">Businesses</a></li>
+              <li><a href="reviews.html">Reviews</a></li>
+              <li><a href="eventListing.html">Events</a></li>
+              <li><a href="community.html">Community</a></li>
+          </ul>
       </div>
-    </header>
-    <!-- end of header -->
+  </section>
     
    
 
@@ -58,7 +42,7 @@
               <span><i class = "far fa-heart"></i></span>
             </div>
             <div class = "blog-text">
-              <span>20 January, 2020</span>
+              <span>15 September, 2023</span>
               <h2>Lorem ipsum, dolor sit amet consectetur adipisicing</h2>
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis libero quas ipsum laudantium nihil! Quaerat.</p>
               <a href = "#">Comments</a>
@@ -72,10 +56,10 @@
               <span><i class = "far fa-heart"></i></span>
             </div>
             <div class = "blog-text">
-              <span>20 January, 2020</span>
-              <h2>Lorem ipsum, dolor sit amet consectetur adipisicing</h2>
+              <span>15 September, 2023</span>
+                            <h2>Lorem ipsum, dolor sit amet consectetur adipisicing</h2>
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis libero quas ipsum laudantium nihil! Quaerat.</p>
-              <a href = "#">Comments</a>
+              <a href = "#" >Comments</a>
             </div>
           </div>
           <!-- end of item -->
@@ -86,8 +70,8 @@
               <span><i class = "far fa-heart"></i></span>
             </div>
             <div class = "blog-text">
-              <span>20 January, 2020</span>
-              <h2>Lorem ipsum, dolor sit amet consectetur adipisicing</h2>
+              <span>15 September, 2023</span>
+                            <h2>Lorem ipsum, dolor sit amet consectetur adipisicing</h2>
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis libero quas ipsum laudantium nihil! Quaerat.</p>
               <a href = "#">Comments</a>
             </div>
