--- a/events.html
+++ b/events.html
@@ -25,14 +25,14 @@
 	<div class="business-info">
 		<div class="business">
 			<div>
-				<img id="businessImage" src="" alt="Business Image">
+				<img id="businessImage" src="https://source.unsplash.com/20 0x200/?event" alt="Business Image" >
 			</div>
 			<div>
 				<h2 id="businessName"></h2>
 				<p id="businessDescription"></p>
 			</div>
 		</div>
-		<div id="title"> 
+		<!--<div id="title"> 
 			<h3> Our Products</h3>
         </div>
         <div id="productimages">
@@ -41,6 +41,7 @@
             <img id="ProductImage" src="https://source.unsplash.com/200x200/?book" alt="Business Image">
             <img id="ProductImage" src="https://source.unsplash.com/200x200/?laptop" alt="Business Image">
         </div>
+    -->
 		<div id="title"> 
 			<h3>Detailed Description</h3>
 			<p id="businessDetailed"></p>
