--- a/eventListing.html
+++ b/eventListing.html
@@ -9,16 +9,17 @@
 </head>
 <body>
     <section id="header">
-        <a href="#"><img src="images/localhublogo-removebg-preview.png" width="100" height="100"></a>
+        <a href="buisnessListing.html"><img src="images/localhublogo-removebg-preview.png" width="100" height="100"></a>
         <div>
             <ul id="navbar">
-                <li><a class="active">Businesses</a></li>
+                <li><a href="buisnessListing.html">Businesses</a></li>
                 <li><a href="reviews.html">Reviews</a></li>
                 <li><a href="shop.html">Shop</a></li>
                 <li><a href="community.html">Community</a></li>
             </ul>
         </div>
     </section>
+   
     <h1>Listed Events</h1>
     <div id="events-list"></div>
 
