--- a/reviews.html
+++ b/reviews.html
@@ -3,9 +3,20 @@
 <head>
     <title>Rating</title>
     <link rel="stylesheet" href="css/styles2.css">
+    <link rel="stylesheet" href="css/business.css"/>
 </head>
 <body>
-    <div id="header"></div>
+    <section id="header">
+        <a href="#"><img src="images/localhublogo-removebg-preview.png" width="100" height="100"></a>
+        <div>
+            <ul id="navbar">
+                <li><a href="businessListing.html">Businesses</a></li>
+                <li><a href="reviews.html">Reviews</a></li>
+                <li><a href="eventListing.html">Events</a></li>
+                <li><a href="community.html">Community</a></li>
+            </ul>
+        </div>
+    </section>
     <div class="back">
         <label class="name"><h1>name</h1><input id="name"></label>
         <label class="id"><h1>id</h1><input id="id"></label>
