--- a/business.html
+++ b/business.html
@@ -14,6 +14,7 @@
                 <li><a href="reviews.html">Reviews</a></li>
                 <li><a href="eventListing.html">Events</a></li>
                 <li><a href="community.html">Community</a></li>
+                <li><a href="chat2.html">Chat</a></li>
             </ul>
         </div>
     </section>
